+ Added form z-index for correct showing after change browser window size in IE8 + commented all console.log() for IE8

--- a/app/css/login.css
+++ b/app/css/login.css
@@ -17,6 +17,7 @@
     color: #bec0c8;;
 }
 .login-form {
+	z-index: 99;
 	display: block;
 	margin: auto;
 	width: 590px;
